небольшой рефакторинг и доработка
